	reverted shot sound of AS50 rifle and GAU8 cannon to original
	reverted zeroing function to Jackal 2 car turret with GMG grenade launcher
	shot sound of BAF_L2A1 machine gun and GSh302K cannon
	all patches are merged into single patch

Fixed:
	SVD rifle optics modes bug related to ACE mod
	appearance of "No owner" messages in RPT file
	some other issues


18/12/2015

Added:
	ArmA 2 weapons in Combined Arms need the zeroing function (http://dev.withsix.com/issues/62628)
	zeroing for A2 vehicles (http://dev.withsix.com/issues/62629)
	ballisticsComputer to more weapons (http://dev.withsix.com/issues/67380)
	made Library_WeaponHolder able to hold backpacks (http://dev.withsix.com/issues/67652)
	manual zeroing options for vehicles (http://dev.withsix.com/issues/70594)
	"auto" fire mode to M14_EP1 rifle

Changed:
	deleted CIT #14888 bug fix due to impossibility to complete mission from PMC campaign
	ammo of 60Rnd_762x54_DT magazine to one with tracers
	"get in" / "get out" actions of some vehicles
	number of every tracers in a belt of 1904Rnd_30mmAA_2A38M magazine
	rate of fire of M134 machine gun and some cannons

Fixed:
	vehicle- and tripod-mounted L111A1 (M2HB) and M621 (Lynx 20mm) are using the M240 firing sound (http://dev.withsix.com/issues/13602)
	pistol dispersion too high (http://dev.withsix.com/issues/16115)
	GMG Jackal zeroing breaks at 1500m setting (http://dev.withsix.com/issues/19295)
	CfgMagazines - obsolete sound definitions (http://dev.withsix.com/issues/22991)
	CfgMagazines - obsolete reloadMagazineSound definitions (http://dev.withsix.com/issues/22992)
	CfgMagazines - obsolete soundFly definitions (http://dev.withsix.com/issues/22994)
	CfgMagazines - obsolete reloadSound definitions (http://dev.withsix.com/issues/22996)
	CfgMagazines - obsolete soundHit definitions (http://dev.withsix.com/issues/22998)
	CfgMagazines - obsolete cartridge definition in 64Rnd_9x19_SD_Bizon (http://dev.withsix.com/issues/22999)