@@ -1,0 +1,1 @@
+Fixed: CfgVehicles - several threat definitions for helicopters could need improvement (http://dev.withsix.com/issues/24839)
