@@ -82,7 +82,7 @@ class CfgPatches
 			"CorePatch_CIT_24719",
 			"CorePatch_CIT_24764",
 			"CorePatch_CIT_24780",
-			"CorePatch_CIT_24817_24839",
+			"CorePatch_CIT_24839",
 			"CorePatch_CIT_24841",
 			"CorePatch_CIT_24842",
 			"CorePatch_CIT_24887",
@@ -114,7 +114,6 @@ class CfgPatches
 			"CorePatch_Dubbing_Fix",
 			"CorePatch_FIS_Fix",
 			"CorePatch_GAU22",
-			"CorePatch_GC_Fix",
 			"CorePatch_Javelin_Fix",
 			"CorePatch_LaserTargetCSide",
 			"CorePatch_M113_PMC",
