@@ -2,3 +2,6 @@ Changed:
 	ammo of 60Rnd_762x54_DT to one with tracers
 	inventory picture of OG7
 	number of every tracers in a belt of 1904Rnd_30mmAA_2A38M
+
+Fixed:
+	some localization mistakes
