@@ -1,4 +1,4 @@
-/*%FSM<COMPILE "G:\Program Files (x86)\Bohemia Interactive\Tools\FSM Editor Personal Edition\scriptedFSM.cfg, Garbage Collector">*/
+/*%FSM<COMPILE "C:\Program Files (x86)\Bohemia Interactive\Tools\FSM Editor Personal Edition\scriptedFSM.cfg, Garbage Collector">*/
 /*%FSM<HEAD>*/
 /*
 item0[] = {"Start",0,250,-20.000000,-160.000000,70.000000,-110.000000,0.000000,"Start"};
@@ -45,7 +45,7 @@ class FSM
        "_collector setVariable [""queue"", [], true];" \n
        "" \n
        "//Compile the function that allows trashing of content." \n
-       "BIS_GC_trashItFunc = compile (preprocessFileLineNumbers (""\CorePatch\CorePatch_GC\data\scripts\trashIt.sqf""));"/*%FSM</STATEINIT""">*/;
+       "BIS_GC_trashItFunc = compile (preprocessFileLineNumbers (""\CorePatch\CorePatch_Modules\GarbageCollector\data\scripts\trashIt.sqf""));"/*%FSM</STATEINIT""">*/;
       precondition = /*%FSM<STATEPRECONDITION""">*/""/*%FSM</STATEPRECONDITION""">*/;
       class Links
       {
@@ -194,7 +194,7 @@ class FSM
     class ___process_queue
     {
       name = "___process_queue";
-      init = /*%FSM<STATEINIT""">*/"_handle = execVM (""\CorePatch\CorePatch_GC\data\scripts\process_queue.sqf"");"/*%FSM</STATEINIT""">*/;
+      init = /*%FSM<STATEINIT""">*/"_handle = execVM (""\CorePatch\CorePatch_Modules\GarbageCollector\data\scripts\process_queue.sqf"");"/*%FSM</STATEINIT""">*/;
       precondition = /*%FSM<STATEPRECONDITION""">*/""/*%FSM</STATEPRECONDITION""">*/;
       class Links
       {
