@@ -1753,6 +1753,13 @@ class CfgVehicles
 				discreteDistance[] = {100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 1100, 1200, 1300, 1400, 1500, 1600, 1700, 1800, 1900, 2000};
 				discreteDistanceInitIndex = 5;
 				turretInfoType = "RscWeaponZeroing";
+
+				class ViewOptics
+				{
+					initFov = 0.070821531; // 3.5x
+					maxFov = 0.070821531;
+					minFov = 0.070821531;
+				};
 			};
 		};
 	};
