@@ -152,16 +152,24 @@ class CfgWeapons
 	};
 	class GSh301 : CannonCore // 1500 SPM
 	{
+		displayName = "$STR_DN_GSH301_CP";
+
 		class manual : CannonCore
 		{
 			burst = 5; // 0.2 s
+			displayName = "$STR_DN_GSH301_CP";
+			initSpeed = 860;
 		};
 	};
 	class GSh302 : CannonCore
 	{
+		displayName = "$STR_DN_GSH302_CP";
+
 		class manual : CannonCore
 		{
 			burst = 10; // 0.2 s
+			displayName = "$STR_DN_GSH302_CP";
+			initSpeed = 870;
 			reloadTime = 0.02; // 3000 SPM
 			sound[] = {
 				"\Ca\sounds\Weapons\cannon\A10vulcanIV",
@@ -954,9 +962,9 @@ class CfgVehicles
 
 				class ViewOptics
 				{
-					initFov = 0.2;
-					maxFov = 0.2;
-					minFov = 0.057999998;
+					initFov = 0.070821531; // 3.5x
+					maxFov = 0.070821531;
+					minFov = 0.070821531;
 				};
 			};
 		};
